edit: synchronized the '!ping' command with the last command changes